--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,22 @@ dependencies {
 
     implementation group: "junit", name:"junit", version:"4.+"
 
+    //JWT
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    //
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group:'com.vaadin.external.google', module:'android-json'
     }
