--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,24 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
+
+#FTP
+ftp.server=${ftp.server}
+ftp.port=${ftp.port}
+ftp.username=${ftp.username}
+ftp.password=${ftp.password}
+
+#SMS
+cool-sms.api-key=${cool-sms.api-key}
+cool-sms.api-secret=${cool-sms.api-secret}
+cool-sms.api-url=${cool-sms.api-url}
+
+#Database
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.jwt.accessSecret=${spring.jwt.accessSecret}
+spring.jwt.refreshSecret=${spring.jwt.refreshSecret}
