--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,22 +21,22 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 
 #FTP
-ftp.server=${ftp.server}
-ftp.port=${ftp.port}
-ftp.username=${ftp.username}
-ftp.password=${ftp.password}
+ftp.server=${FTP_SERVER}
+ftp.port=${FTP_PORT}
+ftp.username=${FTP_USERNAME}
+ftp.password=${FTP_PASSWORD}
 
 #SMS
-cool-sms.api-key=${cool-sms.api-key}
-cool-sms.api-secret=${cool-sms.api-secret}
-cool-sms.api-url=${cool-sms.api-url}
+cool-sms.api-key=${SMS_KEY}
+cool-sms.api-secret=${SMS_PASSWORD}
+cool-sms.api-url=${SMS_URL}
 
 #Database
-spring.datasource.url=${spring.datasource.url}
-spring.datasource.username=${spring.datasource.username}
-spring.datasource.password=${spring.datasource.password}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.jwt.accessSecret=${spring.jwt.accessSecret}
-spring.jwt.refreshSecret=${spring.jwt.refreshSecret}
+spring.jwt.accessSecret=${ACCESSTOKEN}
+spring.jwt.refreshSecret=${REFRESHTOKEN}
