3/10 User, Post 일관성있게 리팩토링 진행중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
+
+#multipart
+servlet:
+multipart:
+enabled: true
+location:/home/www/html/images/
+max-request-size: 30MB
+max-file-size: 10MB
