3/12 포스트 이미지 업로드 오류 해결중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,6 @@ server.address=0.0.0.0
 
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
-
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
@@ -19,11 +18,9 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
-
+logging.level.org.springframework.web: DEBUG
 #multipart
-servlet:
-multipart:
-enabled: true
-location:/home/www/html/images/
-max-request-size: 30MB
-max-file-size: 10MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=/home/www/html/images/
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
