--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.thymeleaf.encoding=UTF-8
 #FTP
 ftp.server=${FTP_SERVER}
 ftp.port=${FTP_PORT}
+ftp.url=${FTP_URL}
 ftp.username=${FTP_USERNAME}
 ftp.password=${FTP_PASSWORD}
 
